1.5/_sources/modules/generated/sklearn.model_selection.FixedThresholdClassifier.rst.txt
FixedThresholdClassifier
========================

.. currentmodule:: sklearn.model_selection

.. autoclass:: FixedThresholdClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.model_selection.FixedThresholdClassifier sklearn.model_selection.FixedThresholdClassifier.__init__ sklearn.model_selection.FixedThresholdClassifier.decision_function sklearn.model_selection.FixedThresholdClassifier.fit sklearn.model_selection.FixedThresholdClassifier.get_metadata_routing sklearn.model_selection.FixedThresholdClassifier.get_params sklearn.model_selection.FixedThresholdClassifier.predict sklearn.model_selection.FixedThresholdClassifier.predict_log_proba sklearn.model_selection.FixedThresholdClassifier.predict_proba sklearn.model_selection.FixedThresholdClassifier.score sklearn.model_selection.FixedThresholdClassifier.set_params sklearn.model_selection.FixedThresholdClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -