1.7/_sources/modules/generated/sklearn.model_selection.FixedThresholdClassifier.rst.txt
FixedThresholdClassifier
========================

.. currentmodule:: sklearn.model_selection

.. autoclass:: FixedThresholdClassifier
   :members:
   :inherited-members:
   :special-members: __call__

.. minigallery:: sklearn.model_selection.FixedThresholdClassifier sklearn.model_selection.FixedThresholdClassifier.__delattr__ sklearn.model_selection.FixedThresholdClassifier.__dir__ sklearn.model_selection.FixedThresholdClassifier.__eq__ sklearn.model_selection.FixedThresholdClassifier.__format__ sklearn.model_selection.FixedThresholdClassifier.__ge__ sklearn.model_selection.FixedThresholdClassifier.__getattribute__ sklearn.model_selection.FixedThresholdClassifier.__getstate__ sklearn.model_selection.FixedThresholdClassifier.__gt__ sklearn.model_selection.FixedThresholdClassifier.__hash__ sklearn.model_selection.FixedThresholdClassifier.__init__ sklearn.model_selection.FixedThresholdClassifier.__init_subclass__ sklearn.model_selection.FixedThresholdClassifier.__le__ sklearn.model_selection.FixedThresholdClassifier.__lt__ sklearn.model_selection.FixedThresholdClassifier.__ne__ sklearn.model_selection.FixedThresholdClassifier.__new__ sklearn.model_selection.FixedThresholdClassifier.__reduce__ sklearn.model_selection.FixedThresholdClassifier.__reduce_ex__ sklearn.model_selection.FixedThresholdClassifier.__repr__ sklearn.model_selection.FixedThresholdClassifier.__setattr__ sklearn.model_selection.FixedThresholdClassifier.__setstate__ sklearn.model_selection.FixedThresholdClassifier.__sizeof__ sklearn.model_selection.FixedThresholdClassifier.__sklearn_clone__ sklearn.model_selection.FixedThresholdClassifier.__sklearn_tags__ sklearn.model_selection.FixedThresholdClassifier.__str__ sklearn.model_selection.FixedThresholdClassifier.__subclasshook__ sklearn.model_selection.FixedThresholdClassifier._build_request_for_signature sklearn.model_selection.FixedThresholdClassifier._fit sklearn.model_selection.FixedThresholdClassifier._get_default_requests sklearn.model_selection.FixedThresholdClassifier._get_doc_link sklearn.model_selection.FixedThresholdClassifier._get_metadata_request sklearn.model_selection.FixedThresholdClassifier._get_param_names sklearn.model_selection.FixedThresholdClassifier._get_params_html sklearn.model_selection.FixedThresholdClassifier._get_response_method sklearn.model_selection.FixedThresholdClassifier._html_repr sklearn.model_selection.FixedThresholdClassifier._repr_html_inner sklearn.model_selection.FixedThresholdClassifier._repr_mimebundle_ sklearn.model_selection.FixedThresholdClassifier._validate_params sklearn.model_selection.FixedThresholdClassifier.decision_function sklearn.model_selection.FixedThresholdClassifier.fit sklearn.model_selection.FixedThresholdClassifier.get_metadata_routing sklearn.model_selection.FixedThresholdClassifier.get_params sklearn.model_selection.FixedThresholdClassifier.predict sklearn.model_selection.FixedThresholdClassifier.predict_log_proba sklearn.model_selection.FixedThresholdClassifier.predict_proba sklearn.model_selection.FixedThresholdClassifier.score sklearn.model_selection.FixedThresholdClassifier.set_params sklearn.model_selection.FixedThresholdClassifier.set_score_request 
   :add-heading: Gallery examples
   :heading-level: -